--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@
             background-color: #f2f2f2;
             display: flex;
             justify-content: center;
-            align-items: center;
-            height: 100vh;
             margin: 0;
             overflow: hidden;
+            box-sizing: border-box;
             /* Prevents body from scrolling */
         }
 
@@ -24,10 +23,10 @@
             border-radius: 10px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             text-align: center;
-            width: 90%;
+            width: 100%;
             max-width: 400px;
-            position: relative;
-            max-height: 90vh;
+            /* position: relative; */
+            max-height: 100vh;
             /* Limits container height */
             overflow-y: auto;
             /* Enables vertical scrolling */
@@ -60,9 +59,6 @@
             background-color: #f44336;
             font-size: 12px;
             padding: 5px 10px;
-            /* position: absolute;
-            top: 10px;
-            right: 0px; */
         }
 
         #timerDisplay {
@@ -102,7 +98,7 @@
         #fixedTimer {
             position: fixed;
             height: 220px;
-            width: 400px;
+            width:90%;
             background-color: white;
         }
 
